# deutsch-learn

./: .gitignore
backend/: pyproject.toml
backend/src/app/: database.py  main.py
backend/src/app/words/: controller.py  model.py  schemas.py  service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActionButton.tsx  Bg.tsx  ConfettiParticles.tsx  DictionaryItem.tsx  HomeButton.tsx  InputField.tsx  WhiteCard.tsx
frontend/src/layout/: AddWordForm.tsx  WordCard.tsx
frontend/src/pages/: AddWord.tsx  Dictionary.tsx  Task.tsx
frontend/src/types/: WordType.ts
frontend/src/utils/: DeleteArticle.ts
